# AetherSync-AI

./: .gitignore  Dockerfile  README.md  project_outline.txt  pyproject.toml  requirements.txt
assets/: prompt_questions.txt
src/: main.py
src/backend/adk_agent/: adk_agent.py
src/backend/api/: app.py
src/backend/db/: run_logger.py  seed_db.py  sqlite.py
src/backend/workflow/: graph_flow.py
src/backend/workflows/: graph_flow.py  graph_router.py
src/frontend/: .gitignore  index.html  package-lock.json  package.json  streamlit_ui.py  vite.config.js
src/frontend/src/: App.jsx  mockData.js  theme.js
src/mcp_server/: mcp_registry.py  server.py
src/mcp_sever/: server.py
src/tmp/schedule_queue/: 2026-04-07T12:17:19.088178.json  2026-04-07T12:17:19.090678.json  2026-04-07T12:17:19.091375.json  2026-04-07T12:17:19.092297.json  2026-04-07T12:28:29.095756.json  2026-04-07T12:28:29.097268.json  2026-04-07T12:28:29.098723.json  2026-04-07T12:28:29.099702.json  2026-04-07T12:28:29.100420.json  2026-04-07T13:09:53.250066.json  2026-04-07T13:09:53.251762.json  2026-04-07T13:09:53.252960.json  2026-04-07T13:09:53.253817.json  2026-04-07T13:09:53.254783.json  2026-04-07T13:19:38.129227.json  2026-04-07T13:19:38.131198.json  2026-04-07T13:19:38.131795.json  2026-04-07T13:19:38.132362.json  2026-04-07T13:19:38.133207.json  2026-04-07T13:19:38.133847.json  2026-04-07T13:19:38.134466.json  2026-04-07T13:19:38.135049.json  2026-04-07T13:41:25.231361.json  2026-04-07T13:41:25.235587.json  2026-04-07T13:41:25.236349.json  2026-04-07T13:41:25.237016.json  (+24 more)
(+10 files in other folders)
